<resources>
    <string name="app_name">ViceSeeThee</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already registered?</string>
    <string name="welcome_user">Welcome user!</string>
    <string name="track_vices">Track Vices</string>
    <string name="get_help">Get Help?</string>
    <string name="statistics">Statistics</string>
    <string name="aap">Alcoholics Anonymous is a fellowship of men and women who share their experience, strength and hope with each other that they may solve their common problem and help others to recover from alcoholism.</string>
    <string name="nica">Nicotine Anonymous ("NicA") is a non-profit 12-step fellowship of men and women helping each other live nicotine-free lives. Nicotine Anonymous welcomes all those seeking freedom from nicotine addiction, including those using cessation programs and nicotine withdrawal aids.</string>
    <string name="cigarettes">Cigarettes:</string>
    <string name="alcohol">Alcohol:</string>
    <string name="cigarette_cost_php">Cigarette cost: Php</string>
    <string name="alcohol_cost_php">Alcohol cost: Php</string>
    <string name="save_data">Save Data</string>
    <string name="back_to_log_in">Back to Log in</string>
    <string name="e_mail">E-mail</string>
    <string name="donthaveone">I don\'t have an account yet. Creat one.</string>
</resources>
