<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/smokingmonalisa"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="127dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/viceseethee"
            android:id="@+id/imageView"/>
    <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/edittext_username"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="190dp"
                android:paddingLeft="2dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/username"
                android:hint="@string/username"/>

        <EditText
                android:id="@+id/edittext_password"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:drawableLeft="@drawable/password"
                android:hint="@string/password"/>
    </LinearLayout>

    <Button
            android:id="@+id/button_login"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#f81894"
            android:textColor="#ffffff"
            android:text="@string/log_in"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="#ffffff"
                android:text="@string/not_registered"/>

        <TextView
                android:id="@+id/textview_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="#f81894"
                android:text="@string/register"/>

    </LinearLayout>
</LinearLayout>

