<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".HomeActivity"
              android:background="@drawable/starrynight"
              android:orientation="vertical"
              android:gravity="center_horizontal">


    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/viceseethee"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/imageView2"/>
    <Button
            android:text="@string/track_vices"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:background="#f81894"
            android:textColor="#FFFFFF"
            android:layout_marginTop="150dp"
            android:id="@+id/button_track"/>

    <Button android:layout_width="260dp"
            android:layout_height="40dp"
            android:text="@string/statistics"
            android:background="#f81894"
            android:textColor="#FFFFFF"
            android:id="@+id/button_stat"
            android:layout_marginTop="50dp"/>

    <Button
            android:text="@string/get_help"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:background="#f81894"
            android:textColor="#FFFFFF"
            android:layout_marginTop="50dp"
            android:id="@+id/button_get_help"/>
    <ImageButton
            android:layout_marginTop="50dp"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:background="@null"
            app:srcCompat="@mipmap/logout"
            android:id="@+id/imageButton_logout"
            android:scaleType="fitXY"/>
</LinearLayout>

